logs/mrsd_ros_tutorials/build.make.104.log.stderr
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp: In function ‘int main(int, char**)’:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:71:9: error: ‘kinect_color_pc’ was not declared in this scope
         kinect_color_pc = srv.response.point_cloud;
         ^
make[2]: *** [CMakeFiles/perception_data.dir/src/perception_data.cpp.o] Error 1
make[1]: *** [CMakeFiles/perception_data.dir/all] Error 2
make: *** [all] Error 2
